# stress-testing-web-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
migrations/2024-08-05-053816_create_employees/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
testing/: run_siege.sh  urls.txt
testing/results/: siege_results_2024-08-05_08-30-57.csv
