[package]
name = "stress-testing-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
mongodb = "3.0.1"
futures-util = "0.3"
diesel = { version = "2.0.4", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
r2d2 = "0.8"
log = "0.4.22"
env_logger = "0.11.5"
